[package]
name = "rust-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = "0.79.0"
tokio = { version = "1.45.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sea-orm = { version = "1.1.12", features = ["macros", "sqlx-mysql", "runtime-tokio-rustls"] }
config = { version = "0.15.11", features = ["yaml"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
